--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Editorial Sone Webapp" />
+    <meta name="description" content="Editorials One Webapp" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:500,700&display=swap"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Editorial Sone</title>
+    <title>Editorials One</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
